--- a/modules/infrastructure/src/main/resources/application.conf
+++ b/modules/infrastructure/src/main/resources/application.conf
@@ -1,3 +1,6 @@
+#################################
+# Akka
+#################################
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "INFO"
@@ -14,3 +17,48 @@ http {
   port = 5000
   port = ${?PORT}
 }
+
+#################################
+# ScalikeJDBC
+#################################
+# JDBC settings
+db.default.driver="org.h2.Driver"
+db.default.url="jdbc:h2:tcp://localhost/~/h2/db/fp"
+db.default.user="fp"
+db.default.password="pf"
+# Connection Pool settings
+db.default.poolInitialSize=10
+db.default.poolMaxSize=20
+db.default.connectionTimeoutMillis=1000
+
+# Connection Pool settings
+db.default.poolInitialSize=5
+db.default.poolMaxSize=7
+db.default.poolConnectionTimeoutMillis=1000
+db.default.poolValidationQuery="select 1 as one"
+db.default.poolFactoryName="fp"
+
+db.legacy.driver="org.h2.Driver"
+db.legacy.url="jdbc:h2:tcp://localhost/~/h2/db/fp"
+db.legacy.user="fp"
+db.legacy.password="pf"
+
+# MySQL example
+# db.default.driver="com.mysql.jdbc.Driver"
+# db.default.url="jdbc:mysql://localhost/scalikejdbc"
+
+# PostgreSQL example
+# db.default.driver="org.postgresql.Driver"
+# db.default.url="jdbc:postgresql://localhost:5432/scalikejdbc"
+
+# Global settings
+scalikejdbc.global.loggingSQLErrors=true
+scalikejdbc.global.loggingConnections=true
+scalikejdbc.global.loggingSQLAndTime.enabled=true
+scalikejdbc.global.loggingSQLAndTime.logLevel=info
+scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
+scalikejdbc.global.loggingSQLAndTime.warningThresholdMillis=1000
+scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
+scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
+scalikejdbc.global.loggingSQLAndTime.printUnprocessedStackTrace=false
+scalikejdbc.global.loggingSQLAndTime.stackTraceDepth=10
