--- a/modules/infrastructure/src/main/resources/application.conf
+++ b/modules/infrastructure/src/main/resources/application.conf
@@ -1,6 +1,8 @@
 #################################
 # Akka
 #################################
+actor.system.name = "fp-actor-system"
+
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "INFO"
@@ -27,21 +29,16 @@ db.default.url="jdbc:h2:tcp://localhost/~/h2/db/fp"
 db.default.user="fp"
 db.default.password="pf"
 # Connection Pool settings
-db.default.poolInitialSize=10
-db.default.poolMaxSize=20
-db.default.connectionTimeoutMillis=1000
-
-# Connection Pool settings
 db.default.poolInitialSize=5
 db.default.poolMaxSize=7
-db.default.poolConnectionTimeoutMillis=1000
+db.default.poolConnectionTimeoutMillis=3000
 db.default.poolValidationQuery="select 1 as one"
-db.default.poolFactoryName="fp"
+#db.default.poolFactoryName='fp
 
-db.legacy.driver="org.h2.Driver"
-db.legacy.url="jdbc:h2:tcp://localhost/~/h2/db/fp"
-db.legacy.user="fp"
-db.legacy.password="pf"
+#db.legacy.driver="org.h2.Driver"
+#db.legacy.url="jdbc:h2:tcp://localhost/~/h2/db/fp"
+#db.legacy.user="fp"
+#db.legacy.password="pf"
 
 # MySQL example
 # db.default.driver="com.mysql.jdbc.Driver"
@@ -59,6 +56,6 @@ scalikejdbc.global.loggingSQLAndTime.logLevel=info
 scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
 scalikejdbc.global.loggingSQLAndTime.warningThresholdMillis=1000
 scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
-scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
+scalikejdbc.global.loggingSQLAndTime.singleLineMode=true
 scalikejdbc.global.loggingSQLAndTime.printUnprocessedStackTrace=false
 scalikejdbc.global.loggingSQLAndTime.stackTraceDepth=10
