--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-modules/infrastructure/src/main/resources/fp-frontend/public/css/vender linguist-vendored
+modules/infrastructure/src/main/resources/fp-frontend/public/css/vender/* linguist-vendored
