--- a/modules/infrastructure/src/main/resources/application.conf
+++ b/modules/infrastructure/src/main/resources/application.conf
@@ -1,4 +1,12 @@
+##################################
+# Https
 #################################
+https {
+  keystore = "louvre2489-fp.p12"
+  password = "changit"
+}
+
+################################
 # Akka
 #################################
 actor.system.name = "fp-actor-system"
