--- a/modules/infrastructure/src/main/resources/application.conf
+++ b/modules/infrastructure/src/main/resources/application.conf
@@ -3,7 +3,7 @@
 #################################
 https {
   keystore = "louvre2489-fp.p12"
-  password = "changit"
+  password = "louvre2489"
 }
 
 ################################
