--- a/modules/infrastructure/src/main/resources/fp-frontend/package.json
+++ b/modules/infrastructure/src/main/resources/fp-frontend/package.json
@@ -18,6 +18,7 @@
     "elm-test": "^0.19.0-rev6",
     "elm-verify-examples": "^3.1.0",
     "elm-webpack-loader": "^5.0.0",
+    "eslint": "^5.16.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
