--- a/modules/infrastructure/src/main/resources/fp-frontend/package.json
+++ b/modules/infrastructure/src/main/resources/fp-frontend/package.json
@@ -7,15 +7,15 @@
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
-    "babel-loader": "^8.0.5",
-    "clean-webpack-plugin": "^2.0.1",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^2.0.2",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
-    "elm": "^0.19.0-bugfix6",
+    "elm": "^0.19.0",
     "elm-format": "^0.8.1",
     "elm-hot-webpack-loader": "^1.0.2",
     "elm-oracle": "^1.1.1",
-    "elm-test": "^0.19.0-rev6",
+    "elm-test": "^0.19.0",
     "elm-verify-examples": "^3.1.0",
     "elm-webpack-loader": "^5.0.0",
     "eslint": "^5.16.0",
@@ -27,8 +27,8 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.2.1",
     "webpack-serve": "^3.1.0"
